Updated dependencies; MySQL -> MariaDB; fixed deprecated code